--- a/infrastructure/docker/docker-compose.kafka.yaml
+++ b/infrastructure/docker/docker-compose.kafka.yaml
@@ -43,7 +43,7 @@ services:
       - app-tier
     container_name: "kafka-ui-s"
     ports:
-      - "8080:8080"
+      - "8081:8080"
     restart: "always"
     environment:
       - DYNAMIC_CONFIG_ENABLED=true
@@ -81,6 +81,7 @@ services:
     build:
       context: ../..          
       dockerfile: infrastructure/docker/Dockerfile.data_ingestion
+    container_name: kafka-producer
     networks:
       - app-tier    
     depends_on:
@@ -88,6 +89,9 @@ services:
         condition: service_healthy
       schema-registry:
         condition: service_healthy
+    restart: on-failure
+    environment:
+      - PYTHONUNBUFFERED=1
       
 volumes:
   kafka_0_data_s:
