--- a/infrastructure/docker/docker-compose.spark.yaml
+++ b/infrastructure/docker/docker-compose.spark.yaml
@@ -1,7 +1,8 @@
-
 networks:
   app-tier:
     external: true
+
+name: spark-cluster
 
 services:
   spark-master:
@@ -44,7 +45,7 @@ services:
     ports:
       - "4040:4040"  # Spark Application UI
     volumes:
-      - ../../data_processing:/opt/spark-apps
+      - ../../data_pipeline/consumers:/opt/spark-apps
       - spark_ivy_cache:/root/.ivy2
     command:
       - bash
