--- a/infrastructure/docker/docker-compose.clickhouse.yaml
+++ b/infrastructure/docker/docker-compose.clickhouse.yaml
@@ -6,8 +6,8 @@ services:
     container_name: qoe-clickhouse
     restart: always
     ports:
-      - "8123:8123"  # HTTP interface
-      - "9000:9000"  # Native protocol
+      - "8123:8123"
+      - "9000:9000"
     ulimits:
       nofile:
         soft: 262144
@@ -19,7 +19,7 @@ services:
     volumes:
       - clickhouse_data:/var/lib/clickhouse
       - clickhouse_logs:/var/log/clickhouse-server
-      - ./clickhouse-init:/docker-entrypoint-initdb.d
+      - ../../storage:/docker-entrypoint-initdb.d
     networks:
       - app-tier
     healthcheck:
