--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
+certifi==2025.11.12
 click==8.3.1
 confluent-kafka==2.12.2
+coverage==7.13.0
 fastapi==0.127.0
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.11
+iniconfig==2.3.0
 joblib==1.5.3
 kafka-python==2.3.0
 numpy==2.4.0
+packaging==25.0
 pandas==2.3.3
+pluggy==1.6.0
 pydantic==2.12.5
 pydantic_core==2.41.5
+Pygments==2.19.2
+pytest==8.4.1
+pytest-cov==6.3.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.3
